<resources>
    <string name="app_name">BookInventory</string>

    <!-- CatalogActivity Menu option labels -->
    <string name="action_insert_dummy_data">Insert sample data</string>

    <!-- EditorActivity Menu option labels -->
    <string name="editor_menu_label_save">Save</string>
    <string name="edit_menu_option_delete">Delete</string>


    <!-- Toast messages for inserting new book -->
    <string name="editor_no_content_inserted">No entries to save</string>
    <string name="editor_insert_book_failed">Failed to save new book</string>
    <string name="editor_insert_book_successful">New book saved</string>

    <!-- Toast messages for updating existing book -->
    <string name="editor_update_book_failed">Failed to update book</string>
    <string name="editor_update_book_successful">Book data updated</string>

    <!-- Toast messages for deleting a book -->
    <string name="editor_delete_book_failed">Failed to delete book</string>
    <string name="editor_delete_book_successful">Book is deleted</string>

    <!-- Unsaved changes alert dialog box messages & labels -->
    <string name="unsaved_changes_dialog_msg">Do you want to discard unsaved changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>

    <!-- Action bar labels for the different action modes in EditorActivity -->
    <string name="editor_activity_title_edit_book">Edit book</string>
    <string name="editor_activity_title_new_book">Add new book</string>

    <!-- Delete book alert dialog box messages & labels -->
    <string name="delete_book_dialog_msg">Are you sure you want to delete this book?</string>
    <string name="delete_book_confirmation_label">Delete</string>
    <string name="cancel_deletion">Cancel</string>

    <!-- EditorAcitivty layout texts -->
    <string name="editor_product_name_hint">Product name</string>
    <string name="editor_product_name_title">Title</string>
    <string name="edit_price_title">Price</string>
    <string name="editor_price_hint">10</string>
    <string name="editor_quantity_title">Quantity</string>
    <string name="editor_quantity_hint">0</string>
    <string name="editor_supplier_name_title">Supplier name</string>
    <string name="editor_supplier_name_hint">Firstname Lastname</string>
    <string name="editor_supplier_phone_title">Supplier phone</string>
    <string name="editor_supplier_phone_hint">+123456789</string>

    <string name="catalog_price_symbol">€</string>
    <string name="catalog_sale_button_label">Sale</string>

    <!-- CatalogActivity Sale button feedback messages -->
    <string name="sale_quantity_update_failed">Failed to update quantity</string>
    <string name="editor_missing_content">Fill all fields before saving</string>
    <string name="toast_no_required_app_installed">Phone app needs to be installed</string>
    <string name="catalog_empty_view_text">No books yet.</string>
    <string name="catalog_empty_view_subtext">Add some books to the database!</string>
    <string name="catalog_empty_view_image_content_description">drawing of shelf with three books</string>
    <string name="editor_minus_button_content_description">Button with a minus sign</string>
    <string name="editor_plus_button_content_description">Button with a plus sign</string>
    <string name="editor_phone_icon_content_description">Button with phone sign</string>
    <string name="edit_price_currency">€</string>
    <string name="edit_quantity_measure">pcs</string>


</resources>
