<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_product_name_title" />

        <EditText
            style="@style/EditorFieldStyle"
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:hint="@string/editor_product_name_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_price_title" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:padding="@dimen/activity_margin"
            android:hint="@string/editor_price_hint"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/edit_price_currency" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_quantity_title"
            tools:text="Quantity" />

        <ImageView
            android:id="@+id/minus_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:contentDescription="@string/editor_minus_button_content_description"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_quantity_minus" />

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:hint="@string/editor_quantity_hint"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_quantity_measure" />

        <ImageView
            android:id="@+id/plus_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:contentDescription="@string/editor_plus_button_content_description"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_quantity_plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_supplier_name_title" />

        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:inputType="textPersonName"
            android:hint="@string/editor_supplier_name_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_supplier_phone_title" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:inputType="phone"
            android:hint="@string/editor_supplier_phone_hint" />

        <ImageView
            android:id="@+id/supplier_phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:contentDescription="@string/editor_phone_icon_content_description"
            android:src="@drawable/ic_phone_48dp"
            />

    </LinearLayout>

</LinearLayout>